--- a/package.json
+++ b/package.json
@@ -6,13 +6,23 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "components": "^0.1.0",
+    "express": "^4.18.2",
+    "mdb-react-ui-kit": "^5.1.0",
+    "nodemon": "^2.0.21",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-native": "^0.71.3",
+    "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.6",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "styled": "^1.0.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
@@ -21,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "runn": "nodemon index.js"
   },
   "eslintConfig": {
     "extends": [
